--- a/src/components/ScoreColumnComponent/ScoreColumnGraph/ScoreColumn.css
+++ b/src/components/ScoreColumnComponent/ScoreColumnGraph/ScoreColumn.css
@@ -113,7 +113,7 @@ path[class="recharts-rectangle recharts-tooltip-cursor"] {
   max-width: 600px !important;
   width: 100% !important;
   height: 100% !important;
-  min-width: unset !important;
+  min-width: 500px !important;
   min-height: unset !important;
   max-height: none !important;
   box-sizing: border-box !important;
